--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/et_password_register"
             android:layout_marginTop="10dp"
+            android:inputType="textPassword"
             android:hint="Password"/>
 
         <Button
@@ -58,6 +59,13 @@
             android:background="@color/colorPrimary"
             android:textColor="#fff"
             android:id="@+id/btn_register"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have an account?"
+            android:id="@+id/tv_login"
+            android:layout_marginTop="20dp"
+            android:textSize="15sp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
